# cellspot

./: README.md  pyproject.toml
cellspot/: spot_finder.py
cellspot/scripts/: create_mask.py  intensity_size_plot.py
tests/: conftest.py  test_create_mask.py  test_spot_finder.py
tests/data/: cell_image_001.tif  cell_image_002.tif  cell_image_003.tif  cell_image_004.tif  cell_image_005.tif  kept_001.tiff  mask_001.tiff
