[tool.poetry]
name = "cellspot"
version = "0.1.0"
description = ""
authors = ["heeler <jamie.sherman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bioio = "^1.1.0"
pytest = "^8.3.2"
bioio-ome-tiff = "^1.0.0"
bioio-tifffile = "^1.0.0"
cellpose = "^3.0.10"
tifffile = "^2024.8.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
